# python-my-package

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  __main__.py  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/: __init__.py  __main__.py  main.py
src/ai/: adboost.py  decision_tree.py  nerual_network.py  search.py
src/atcoder/: algorithm.py  bc216.py  bc217.py  bc218.py  beginners_selection.py  contests.py  practice.py  rc126.py  recruit_nihonbashi_half_marathon.py  typical_question1.py
src/basic/: algorithm_data_structure.py  basic.py  concurrency.py  network.py  persistent_storage.py
src/deep_learning/: main.py
src/snippets/: aws.py  meshcode.py  opencv_sample.py
tests/algorithm/: test_search.py
tests/atcoder/: test_algorithm.py
tests/basic/: test_basic.py  test_persistent_storage.py
tests/snippets/: test_meshcode.py
