[tool.poetry]
name = "python-my-package"
version = "0.1.0"
description = "Python my packages"
license = "MIT"
authors = ["mi11km <mi11km.program@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
yapf = "^0.40.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
